--- a/package.json
+++ b/package.json
@@ -1,36 +1,64 @@
 {
   "name": "param-store",
   "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
+  "description": "param store for react",
+  "main": "dist/param-store.js",
   "scripts": {
-    "test": "standard && istanbul cover _mocha --report lcovonly && coveralls < coverage/lcov.info",
-    "test:watch": "mocha --watch"
+    "test": "gulp",
+    "lint": "gulp lint",
+    "test-browser": "gulp test-browser",
+    "watch": "gulp watch",
+    "build": "gulp build",
+    "coverage": "gulp coverage"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/poetic/param-store.git"
   },
-  "keywords": [
-    "param",
-    "store"
-  ],
-  "author": "Chun-Yang",
+  "keywords": [],
+  "author": "Chun Yang <yang2007chun@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/poetic/param-store/issues"
   },
-  "devDependencies": {
-    "chai": "^3.5.0",
-    "coveralls": "^2.11.8",
-    "istanbul": "^0.4.2",
-    "jsdoc": "^3.4.0",
-    "mocha": "^2.4.5",
-    "rimraf": "^2.5.2",
-    "standard": "^6.0.7",
-    "watch": "^0.17.1"
-  },
   "homepage": "https://github.com/poetic/param-store",
+  "devDependencies": {
+    "babel-core": "^6.3.26",
+    "babel-eslint": "^4.1.6",
+    "babel-loader": "^6.2.0",
+    "babel-polyfill": "^6.3.14",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-register": "^6.3.13",
+    "chai": "^3.4.1",
+    "del": "^2.2.0",
+    "glob": "^6.0.3",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.1",
+    "gulp-eslint": "^1.1.1",
+    "gulp-filter": "^3.0.0",
+    "gulp-istanbul": "^0.10.3",
+    "gulp-jscs": "^3.0.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-load-plugins": "^1.1.0",
+    "gulp-mocha": "^2.2.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.1",
+    "gulp-util": "^3.0.7",
+    "isparta": "^4.0.0",
+    "json-loader": "^0.5.3",
+    "mocha": "^2.3.4",
+    "sinon": "^1.17.2",
+    "sinon-chai": "^2.8.0",
+    "vinyl-source-stream": "^1.1.0",
+    "webpack": "^1.12.9",
+    "webpack-stream": "^3.1.0"
+  },
+  "babelBoilerplateOptions": {
+    "entryFileName": "param-store",
+    "mainVarName": "paramStore"
+  },
   "dependencies": {
     "domurl": "^2.1.0",
     "history": "^2.0.1",
