--- a/package.json
+++ b/package.json
@@ -56,12 +56,13 @@
     "webpack-stream": "^3.1.0"
   },
   "babelBoilerplateOptions": {
-    "entryFileName": "param-store",
-    "mainVarName": "paramStore"
+    "entryFileName": "index",
+    "mainVarName": "ParamStore"
   },
   "dependencies": {
     "domurl": "^2.1.0",
     "history": "^2.0.1",
+    "lodash": "^4.7.0",
     "react": "^0.14.8"
   }
 }
