--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "param store for react",
   "main": "dist/param-store.js",
   "scripts": {
-    "test": "gulp",
+    "test": "echo 'NO CI TEST'",
     "lint": "gulp lint",
-    "test-browser": "gulp test-browser",
-    "watch": "gulp watch",
-    "build": "gulp build",
-    "coverage": "gulp coverage"
+    "browser": "gulp test-browser & python -m SimpleHTTPServer & open http://localhost:8000/test/runner.html",
+    "coverage": "gulp coverage",
+    "compile": "babel -d lib/ src/"
   },
   "repository": {
     "type": "git",
@@ -29,6 +28,7 @@
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.3.13",
+    "babel-cli": "^6.6.5",
     "chai": "^3.4.1",
     "del": "^2.2.0",
     "glob": "^6.0.3",
@@ -49,7 +49,6 @@
     "isparta": "^4.0.0",
     "json-loader": "^0.5.3",
     "mocha": "^2.3.4",
-    "react-dom": "^0.14.8",
     "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0",
     "vinyl-source-stream": "^1.1.0",
@@ -62,8 +61,11 @@
   },
   "dependencies": {
     "domurl": "^2.1.0",
-    "history": "^2.0.1",
+    "history": "^2.0.1"
+  },
+  "peerDependencies": {
     "lodash": "^4.7.0",
-    "react": "^0.14.8"
+    "react": "^15.0.0",
+    "react-dom": "^15.0.0"
   }
 }
