--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo 'NO CI TEST'",
     "lint": "gulp lint",
-    "browser": "gulp test-browser & python -m SimpleHTTPServer & open http://localhost:8000/test/runner.html",
+    "browser": "gulp test-browser",
+    "serve": "open http://localhost:8000/test/runner.html && python -m SimpleHTTPServer",
     "coverage": "gulp coverage",
     "build": "babel -d lib/ src/"
   },
@@ -22,13 +23,14 @@
   },
   "homepage": "https://github.com/poetic/param-store",
   "devDependencies": {
-    "babel-core": "^6.3.26",
+    "babel-cli": "^6.7.7",
+    "babel-core": "^6.7.7",
     "babel-eslint": "^4.1.6",
     "babel-loader": "^6.2.0",
     "babel-polyfill": "^6.3.14",
-    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.3.13",
-    "babel-cli": "^6.6.5",
     "chai": "^3.4.1",
     "del": "^2.2.0",
     "glob": "^6.0.3",
