--- a/package.json
+++ b/package.json
@@ -2,65 +2,28 @@
   "name": "param-store",
   "version": "0.4.0",
   "description": "param store for react",
-  "main": "lib/index.js",
+  "main": "dist/src.bundle.js",
   "scripts": {
-    "test": "echo 'NO CI TEST'",
-    "lint": "gulp lint",
-    "browser": "gulp test-browser",
-    "serve": "open http://localhost:8000/test/runner.html && python -m SimpleHTTPServer",
-    "coverage": "gulp coverage",
-    "build": "babel -d lib/ src/"
+    "build": "webpack",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "browser": "open http://localhost:8080/ && webpack-dev-server --hot --inline --content-base ./"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/poetic/param-store.git"
   },
-  "keywords": [],
-  "author": "Chun Yang <yang2007chun@gmail.com>",
+  "keywords": [
+    "react",
+    "url",
+    "history",
+    "query param"
+  ],
+  "author": "Chun Yang (https://github.com/Chun-Yang)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/poetic/param-store/issues"
   },
   "homepage": "https://github.com/poetic/param-store",
-  "devDependencies": {
-    "babel-cli": "^6.7.7",
-    "babel-core": "^6.7.7",
-    "babel-eslint": "^4.1.6",
-    "babel-loader": "^6.2.0",
-    "babel-polyfill": "^6.3.14",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.3.13",
-    "chai": "^3.4.1",
-    "del": "^2.2.0",
-    "glob": "^6.0.3",
-    "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.1",
-    "gulp-eslint": "^1.1.1",
-    "gulp-filter": "^3.0.0",
-    "gulp-istanbul": "^0.10.3",
-    "gulp-jscs": "^3.0.0",
-    "gulp-livereload": "^3.8.1",
-    "gulp-load-plugins": "^1.1.0",
-    "gulp-mocha": "^2.2.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.1",
-    "gulp-util": "^3.0.7",
-    "isparta": "^4.0.0",
-    "json-loader": "^0.5.3",
-    "mocha": "^2.3.4",
-    "sinon": "^1.17.2",
-    "sinon-chai": "^2.8.0",
-    "vinyl-source-stream": "^1.1.0",
-    "webpack": "^1.12.9",
-    "webpack-stream": "^3.1.0"
-  },
-  "babelBoilerplateOptions": {
-    "entryFileName": "index",
-    "mainVarName": "ParamStore"
-  },
   "dependencies": {
     "domurl": "^2.1.0",
     "history": "^2.0.1"
@@ -69,5 +32,17 @@
     "lodash": "^4.7.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.7.7",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "chai": "^3.5.0",
+    "jquery": "^2.2.3",
+    "mocha": "^2.4.5",
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1"
   }
 }
