use bable to compile

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "param-store",
   "version": "0.4.1",
   "description": "param store for react",
-  "main": "dist/src.bundle.js",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "babel src --out-dir dist",
     "test": "echo \"Error: no test specified\" && exit 1",
     "browser": "open http://localhost:8080/ && webpack-dev-server --hot --inline --content-base ./"
   },
