--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "react-dom": "^15.0.0"
   },
   "devDependencies": {
+    "lodash": "^4.7.0",
+    "react": "^15.0.0",
+    "react-dom": "^15.0.0",
     "babel-cli": "^6.7.7",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
